# Omegabot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  alembic.ini  constraints-shared.txt  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release-gate.yml  (+1 more)
backend/: auth.py  requirements-backend.txt  startup_config.py  vault_client.py
contracts/: AaveBotExecutor.sol  AaveBotFactory.sol  NeuralBotVault.sol  SECURITY_EXPANSION_PLAN.md  hardhat.config.js  package.json
docs/: IMPLEMENTATION_MATRIX.md  PHASE1_EXECUTOR_CALLDATA_SPEC.md  RELEASE_BLUEPRINT.md  RELEASE_CHECKLIST.md  REVOLUTION_ROADMAP.md  ROADMAP_RUNTIME_EXECUTOR_HARDENING.md  TODO_MASSIVE.md  chatgpt_patch_manifest_2026-04-12.md  overwrite_patch_bundle_2026-04-12.md
migrations/: env.py
scripts/: apply_executor_patch.py  apply_runtime_patch.py  check_deprecated_imports.py  check_implementation_matrix.py  check_runtime_executor_scaffolding.py  dev_db_init.sh  import_healthcheck.py  release_gate.sh  test.sh
strategies/: __init__.py  advanced_strategies.py
tests/: conftest.py  test_core.py  test_engine_loop_interfaces.py  test_engine_runtime.py  test_executor_calldata.py  test_expansion_blueprints.py  test_implementation_matrix_gate.py  test_market_intel.py  test_market_policy_twin.py  test_release_critical_matrix.py  test_release_metadata.py  test_roadmap_phase_c_d.py  test_roadmap_runtime.py  test_roadmap_slice2.py  test_route_optimizer_advanced.py  test_startup_config.py
web/: app.js  index.html  styles.css
(+42 files in other folders)
